k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-transacciones
  labels:
    app: go-transacciones
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-transacciones
  template:
    metadata:
      labels:
        app: go-transacciones
    spec:
      containers:
      - name: go-transacciones
        image: sampleacrhca.azurecr.io/go-transacciones:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: go-transacciones
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: go-transacciones
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-transacciones-ingress
  namespace: ingress-nginx
  annotations:   
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go-transacciones
            port: 
              number: 80
    # If you want to use a custom domain, add it here
    # host: your-custom-domain.com
  # If you want to enable TLS, uncomment the following block and replace the values
  # tls:
  # - hosts:
  #   - your-custom-domain.com
  #   secretName: tls-secret
---
# This manifest assumes you have the NGINX Ingress Controller deployed in your AKS cluster
# If not, you can deploy it using the following command:
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.2.0/deploy/static/provider/cloud/deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  - port: 443
    targetPort: 443
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/component: controller
