k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-transacciones-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /transaccciones
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /transacciones
        pathType: Prefix
        backend:
          service:
            name: go-transacciones
            port:
              number: 8080
